Remove Hello message

--- a/ClientApp/src/app/home/home.component.html
+++ b/ClientApp/src/app/home/home.component.html
@@ -1,2 +1,2 @@
-<h1>Hello, world!</h1>
-<p>Welcome to your new single-page application, built with:</p>
+<h1>EPP Management APP!</h1>
+<p>EPP Management APP:</p>
