--- a/ClientApp/src/app/home/home.component.html
+++ b/ClientApp/src/app/home/home.component.html
@@ -1,2 +1,19 @@
-<h1>EPP Management APP!</h1>
-<p>EPP Management APP:</p>
+<div>
+    <mat-card class="example-card">
+        <mat-card-header style="color: #428bca;">
+            <mat-card-title>Groups</mat-card-title>
+        </mat-card-header>
+        <mat-divider></mat-divider>
+        <mat-card-content>
+            <p>
+                HTML5 is the next major revision of the HTML standard superseding
+                HTML 4.01, XHTML 1.0, and XHTML 1.1. HTML5 is a standard for
+                structuring and presenting content on the World Wide Web.
+            </p>
+        </mat-card-content>
+        <mat-divider></mat-divider>
+        <mat-card-actions>
+            <button mat-button style="color:#fff;background-color: #428bca;" (click)="Groupsetup()">Manage Groups</button>
+        </mat-card-actions>
+    </mat-card>
+</div>
