--- a/ClientApp/src/app/app.component.html
+++ b/ClientApp/src/app/app.component.html
@@ -1,6 +1,7 @@
 <body>
-  <app-nav-menu></app-nav-menu>
+  <app-header></app-header>
   <div class="container">
     <router-outlet></router-outlet>
   </div>
+  <app-footer></app-footer>
 </body>
