--- a/ClientApp/src/app/group-search/group-search.component.html
+++ b/ClientApp/src/app/group-search/group-search.component.html
@@ -1,5 +1,5 @@
 <div>
-    <!-- <h3 class="text-muted">Group Search Screen</h3> -->
+    <h3 class="text-muted">Group Search Screen</h3>
     <div>
         <button mat-button style="color:#fff;background-color: #428bca!important;
         border-color: #428bca;margin-bottom: 20px;" (click)="GroupSetup()">Add Group</button>
@@ -27,16 +27,16 @@
         <ng-container matColumnDef="edit">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> </th>
             <td mat-cell *matCellDef="let element">
-                <!-- <button mat-button style="color:#fff;background-color: #428bca!important;
-                border-color: #428bca;" (click)="GroupSetup()">{{element.edit}} </button> -->
-                <mat-icon (click)="GroupSetup()" style="cursor: pointer;">edit</mat-icon>
+                <button mat-button style="color:#fff;background-color: #428bca!important;
+                border-color: #428bca;" (click)="GroupSetup()">{{element.edit}} </button>
             </td>
         </ng-container>
 
         <ng-container matColumnDef="clone">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> </th>
-            <td mat-cell *matCellDef="let element">
-                <i class='far fa-clone' style='font-size:24px' (click)="GroupSetup()"></i>
+            <td mat-cell *matCellDef="let element"> 
+                <button mat-button style="color:#fff;background-color: #428bca!important;
+                border-color: #428bca;" (click)="GroupSetup()">{{element.clone}} </button>
             </td>
         </ng-container>
 
