--- a/ClientApp/src/app/group-setup/group-setup.component.html
+++ b/ClientApp/src/app/group-setup/group-setup.component.html
@@ -1,3 +1,4 @@
+<div class="group-setup-section" style="overflow-y: auto;">
 <h3 class="text-muted">Group Setup Screen</h3>
 
 
@@ -44,63 +45,39 @@
 <form [formGroup]="myForm">
    
     <!-- <button (click)="addGroups()"  class="btn btn-primary mb-4">Add Group</button> -->
-    <button mat-flat-button (click)="addGroups()" 
-    color="primary"><mat-icon>add</mat-icon> Add Products</button>
-      <hr>
-    <div formArrayName="groupSetup" class="mb-2"
-     *ngFor="let groupsItem of myForm.controls.groupSetup?.controls ; let i = index; trackBy: trackByFn"
-     >
-      <div [formGroupName]="i">
-          <div class="row">
-              <div class="col">
-                
-                <mat-form-field>
-                    <mat-select [(value)] = dataList[0].name >
-                      <mat-option *ngFor="let data of dataList" [value]= data.name>
-                        {{data.name}}
-                      </mat-option>
-                    </mat-select>
-                  </mat-form-field>
-                  
-              
-                    
-              </div>
-              <div class="col">
-                  <mat-form-field>
-                      <input [min]="minDate" matInput formControlName="date" [matDatepicker]="picker" placeholder="Choose a date">
-                      <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                      <mat-datepicker #picker></mat-datepicker>
-                    </mat-form-field>
-              </div>
-              <div class="col">
-                  <mat-form-field>
-                      <mat-select [(value)] = selectedValue>
-                        <mat-option *ngFor="let state of states" [value]=state.value>
-                          {{state.viewValue}}
-                        </mat-option>
-                      </mat-select>
-                    </mat-form-field>
-                    
-              </div>
-              <div class="col">
-                  <mat-form-field>
-                      <mat-select [(value)] = selectedPlace>
-                        <mat-option *ngFor="let place of places" [value]=place.value>
-                          {{place.value}}
-                        </mat-option>
-                      </mat-select>
-                    </mat-form-field>
-              </div>
-              <div class="col">
-                        <button mat-icon-button color="warn" class="mt-2" (click)="deleteRow(i)">
-                            <mat-icon>delete_outline</mat-icon>
-                          </button>
-              </div>
-          </div>
-      </div>
+    <mat-form-field appearance="fill">
+      <mat-label>Select Products</mat-label>
+      <mat-select (selectionChange)="selectedProducts($event.value)">
+        <mat-option value="Accident">Accident</mat-option>
+        <mat-option value="FPPG">FPPG</mat-option>
+        <mat-option value="FPP Individual">FPP Individual</mat-option>
+        <mat-option value="Hospital Indemnity">Hospital Indemnity</mat-option>
+        <mat-option value="Vol Group Life">Vol Group Life</mat-option>
+        <mat-option value="Voluntary CI">Voluntary CI</mat-option>
+        <mat-option value="Employer Paid CI">Employer Paid CI</mat-option>
+      </mat-select>
+    </mat-form-field>
+    <button mat-flat-button (click)="addProducts()" style="margin-left: 20px;color:#fff;background-color: #428bca!important;
+    border-color: #428bca;"><mat-icon>add</mat-icon> Add Products</button>
+      
+    <div *ngIf="accidentProductSelected">
+     <div style="float:left"> <mat-icon (click)="deleteAccident()" style="color:#000;cursor:pointer;">close</mat-icon> </div>
+      <app-accident></app-accident>
     </div>
-    <hr>
+    <div *ngIf="fppgProductSelected">
+      <div style="float:left"> <mat-icon (click)="deleteAccident()" style="color:#000;cursor:pointer;">close</mat-icon> </div>
+       <app-fppg></app-fppg>
+     </div>
+     <div *ngIf="fppgIndivProductSelected">
+      <div style="float:left"> <mat-icon (click)="deleteAccident()" style="color:#000;cursor:pointer;">close</mat-icon> </div>
+       <app-fpp-individual></app-fpp-individual>
+     </div>
+     <div *ngIf="hospProductSelected">
+      <div style="float:left"> <mat-icon (click)="deleteAccident()" style="color:#000;cursor:pointer;">close</mat-icon> </div>
+       <app-hospital-indemnity></app-hospital-indemnity>
+     </div>
 </form>
 
 <button type="button" class="btn btn-success">Submit Group 
     Setup Information</button>
+  </div>
