group screen changes

--- a/ClientApp/src/app/fppg/fppg.component.html
+++ b/ClientApp/src/app/fppg/fppg.component.html
@@ -1,4 +1,4 @@
-<div class="example-container">
+<div class="container-fluid">
     <mat-form-field hintLabel="Max 10 characters" appearance="fill">
       <mat-label>Enter Products</mat-label>
       <input matInput #input maxlength="10" placeholder="Product Name">
