--- a/ClientApp/src/app/app.component.html
+++ b/ClientApp/src/app/app.component.html
@@ -1,6 +1,6 @@
 <body>
   <app-header></app-header>
-  <div class="container">
+  <div class="container-fluid">
     <router-outlet></router-outlet>
   </div>
   <app-footer></app-footer>
