--- a/ClientApp/src/app/footer/footer.component.css
+++ b/ClientApp/src/app/footer/footer.component.css
@@ -1,8 +1,9 @@
 .footer {
     border-top: 1px solid #CCC;
-    position: fixed;
-    left: 0;
-    bottom: 0;
+    position: relative;
+    /* height: 100px; */
+    margin-top: -100px;
+    clear: both;
     width: 100%;
     text-align: center;
 }
