1.Agent set up added 2.Add and delete Products Functionality implemented 3.2 missed fields added in Group section

--- a/ClientApp/src/app/agent-setup/agent-setup.component.html
+++ b/ClientApp/src/app/agent-setup/agent-setup.component.html
@@ -1,1 +1,81 @@
-<p>agent-setup works!</p>
+<div>
+    <p>Agent Setup Screen</p>
+    <form>
+        <!-- first-row -->
+        <div class="row" style="justify-content:space-evenly;">
+            <div class="col-md-3">
+                <input type="text" class="form-control mb-2" style="width: 100%;" id="inlineFormInputName2"
+                    placeholder="Agent Name">
+            </div>
+            <div class="col-md-3">
+                <input type="text" class="form-control mb-2" style="width: 100%;" id="inlineFormInputName2"
+                    placeholder="Agent SubCount">
+            </div>
+            <div class="col-md-3">
+                <input type="text" class="form-control mb-2 " style="width: 100%;" id="inlineFormInputName2"
+                    placeholder="Commisson Splitup">
+            </div>
+            <div class="col-md-3">
+                <input type="text" class="form-control mb-2 " style="width: 100%;" id="inlineFormInputName2"
+                    placeholder="Primary Agent Number">
+            </div>
+        </div>
+        <!-- second-row -->
+        <div class="row" style="justify-content:space-evenly;">
+            <div class="col-md-3">
+                <input type="text" class="form-control mb-2" style="width: 100%;" id="inlineFormInputName2"
+                    placeholder="Agent Number">
+            </div>
+            <div class="col-md-3">
+                <input type="text" class="form-control mb-2" style="width: 100%;" id="inlineFormInputName2"
+                    placeholder="Agent SubCount">
+            </div>
+            <div class="col-md-3">
+                <input type="text" class="form-control mb-2 " style="width: 100%;" id="inlineFormInputName2"
+                    placeholder="Commisson Splitup">
+            </div>
+            <div class="col-md-3">
+                <input type="text" class="form-control mb-2 " style="width: 100%;" id="inlineFormInputName2"
+                    placeholder="Agent Name">
+            </div>
+        </div>
+        <!-- 3rd-row -->
+        <div class="row" style="justify-content:space-evenly;">
+            <div class="col-md-3">
+                <input type="text" class="form-control mb-2" style="width: 100%;" id="inlineFormInputName2"
+                    placeholder="Agent Number">
+            </div>
+            <div class="col-md-3">
+                <input type="text" class="form-control mb-2" style="width: 100%;" id="inlineFormInputName2"
+                    placeholder="Agent SubCount">
+            </div>
+            <div class="col-md-3">
+                <input type="text" class="form-control mb-2 " style="width: 100%;" id="inlineFormInputName2"
+                    placeholder="Commisson Splitup">
+            </div>
+            <div class="col-md-3">
+                <input type="text" class="form-control mb-2 " style="width: 100%;" id="inlineFormInputName2"
+                    placeholder="Agent Name">
+            </div>
+        </div>
+        <!-- 4th-row -->
+        <div class="row" style="justify-content:space-evenly;">
+            <div class="col-md-3">
+                <input type="text" class="form-control mb-2" style="width: 100%;" id="inlineFormInputName2"
+                    placeholder="Agent Number">
+            </div>
+            <div class="col-md-3">
+                <input type="text" class="form-control mb-2" style="width: 100%;" id="inlineFormInputName2"
+                    placeholder="Agent SubCount">
+            </div>
+            <div class="col-md-3">
+                <input type="text" class="form-control mb-2 " style="width: 100%;" id="inlineFormInputName2"
+                    placeholder="Commisson Splitup">
+            </div>
+            <div class="col-md-3">
+                <input type="text" class="form-control mb-2 " style="width: 100%;" id="inlineFormInputName2"
+                    placeholder="Agent Name">
+            </div>
+        </div>
+    </form>
+</div>
