--- a/ClientApp/src/app/group-setup/group-setup.component.css
+++ b/ClientApp/src/app/group-setup/group-setup.component.css
@@ -5,3 +5,28 @@
     overflow: auto;
     padding-bottom: 100px;
 }
+.select-dropdown {
+    width: 100%;
+    border: 1px solid #ced4da;
+    border-radius: .25rem;
+    height: calc(1.5em + .75rem + 2px);
+    padding: .375rem 1.75rem .375rem .75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #495057;
+}
+
+.mat-form-field-infix {
+    border: 1px solid #ced4da !important;
+    border-radius: .25rem !important;
+    height: calc(1.5em + .75rem + 2px) !important;
+    padding: .375rem 1.75rem .375rem .75rem !important;
+    font-size: 1rem !important;
+    font-weight: 400 !important;
+    line-height: 1.5 !important;
+    color: #495057 !important;
+}
+.mat-form-field {
+    width: 100% !important;
+}
