--- a/ClientApp/src/app/accident/accident.component.css
+++ b/ClientApp/src/app/accident/accident.component.css
@@ -1,5 +1,5 @@
-.example-container .mat-form-field + .mat-form-field {
-    margin-left: 8px;
+.appmt-container .mat-form-field + .mat-form-field {
+    margin-left: 100px;
   }
 
   table, th, td {
