--- a/ClientApp/src/app/fppg/fppg.component.css
+++ b/ClientApp/src/app/fppg/fppg.component.css
@@ -1,17 +1,6 @@
-.example-container .mat-form-field + .mat-form-field {
-    margin-left: 8px;
+.appmt-container .mat-form-field + .mat-form-field {
+    margin-left: 100px;
   }
 
-  .example-h2 {
-    margin: 5px;
-  }
+
   
-  .example-section {
-    display: table-caption;
-   
-    align-items: center;
-  }
-  
-  .example-margin {
-    margin: 0 10px;
-  }
