--- a/ClientApp/src/app/fppg/fppg.component.html
+++ b/ClientApp/src/app/fppg/fppg.component.html
@@ -1,11 +1,18 @@
-<div class="container-fluid">
-    <mat-form-field hintLabel="Max 10 characters" appearance="fill">
-      <mat-label>Enter Products</mat-label>
-      <input matInput #input maxlength="10" placeholder="Product Name">
-      <mat-hint align="end">{{input.value?.length || 0}}/10</mat-hint>
-    </mat-form-field>
+<mat-accordion>
+  <mat-expansion-panel>
+    <mat-expansion-panel-header>
+      <mat-panel-title>
+        FPPG
+      </mat-panel-title>
+    </mat-expansion-panel-header>
+    <div class="appmt-container" style="width: 100%;">
+      <mat-form-field appearance="fill" >
+        <mat-label>Enter Products</mat-label>
+        <input matInput placeholder="Product Name">
 
-    <mat-form-field class="example-full-width">
+      </mat-form-field>
+
+      <mat-form-field class="appmt-full-width">
         <mat-label>Choose a date</mat-label>
         <input matInput [matDatepicker]="picker">
         <mat-datepicker-toggle matSuffix [for]="picker">
@@ -13,141 +20,129 @@
         </mat-datepicker-toggle>
         <mat-datepicker #picker></mat-datepicker>
       </mat-form-field>
-      
-    <mat-form-field appearance="fill">
-      <mat-label>Select me</mat-label>
-      <mat-select>
-        <mat-option value="option">Accident Situs State</mat-option>
-      </mat-select>
-      <mat-hint align="end">Here's the dropdown arrow ^</mat-hint>
-    </mat-form-field>
-  </div>
- 
 
-<div class="example-container">
-    <mat-radio-group aria-label="Select an option">
+      <mat-form-field appearance="fill">
+        <mat-label>Select me</mat-label>
+        <mat-select>
+          <mat-option value="option">Accident Situs State</mat-option>
+        </mat-select>
+        <mat-hint align="end">Here's the dropdown arrow ^</mat-hint>
+      </mat-form-field>
+    </div>
+
+
+    <div class="appmt-container">
+      <mat-radio-group aria-label="Select an option">
         <mat-radio-button value="1"></mat-radio-button>
-         </mat-radio-group>
-    <mat-form-field hintLabel="Max 10 characters" appearance="fill">
-     <mat-label>Enter Products</mat-label>
-      <input matInput #input maxlength="10" placeholder="Product Name">
-    </mat-form-field>
+      </mat-radio-group>
+      <mat-form-field hintLabel="Max 10 characters" appearance="fill">
+        <mat-label>Enter Products</mat-label>
+        <input matInput #input maxlength="10" placeholder="Product Name">
+      </mat-form-field>
 
-  
 
-    <mat-form-field hintLabel="Max 10 characters" appearance="fill">
-      <mat-label>Enter Products</mat-label>
-      <input matInput #input maxlength="10" placeholder="Product Name">
-     
-    </mat-form-field>
-   
-    <mat-form-field hintLabel="Max 10 characters" appearance="fill">
-      <mat-label>Enter Products</mat-label>
-      <input matInput #input maxlength="10" placeholder="Product Name">
-     
-    </mat-form-field>
-  
-  
-  
-  </div>
 
-  <div class="example-container">
-    <mat-radio-group aria-label="Select an option">
+      <mat-form-field hintLabel="Max 10 characters" appearance="fill">
+        <mat-label>Enter Products</mat-label>
+        <input matInput #input maxlength="10" placeholder="Product Name">
+
+      </mat-form-field>
+
+      <mat-form-field hintLabel="Max 10 characters" appearance="fill">
+        <mat-label>Enter Products</mat-label>
+        <input matInput #input maxlength="10" placeholder="Product Name">
+
+      </mat-form-field>
+
+
+
+    </div>
+
+    <div class="appmt-container">
+      <mat-radio-group aria-label="Select an option">
         <mat-radio-button value="1"></mat-radio-button>
-         </mat-radio-group>
-    <mat-form-field hintLabel="Max 10 characters" appearance="fill">
-     <mat-label>Enter Products</mat-label>
-      <input matInput #input maxlength="10" placeholder="Product Name">
-    </mat-form-field>
+      </mat-radio-group>
+      <mat-form-field hintLabel="Max 10 characters" appearance="fill">
+        <mat-label>Enter Products</mat-label>
+        <input matInput #input maxlength="10" placeholder="Product Name">
+      </mat-form-field>
 
-  
 
-    <mat-form-field hintLabel="Max 10 characters" appearance="fill">
-      <mat-label>Enter Products</mat-label>
-      <input matInput #input maxlength="10" placeholder="Product Name">
-     
-    </mat-form-field>
-   
-    <mat-form-field hintLabel="Max 10 characters" appearance="fill">
-      <mat-label>Enter Products</mat-label>
-      <input matInput #input maxlength="10" placeholder="Product Name">
-     
-    </mat-form-field>
-  
-  
-  
-  </div>
 
-  <div class="example-container">
-    <mat-radio-group aria-label="Select an option">
+      <mat-form-field hintLabel="Max 10 characters" appearance="fill">
+        <mat-label>Enter Products</mat-label>
+        <input matInput #input maxlength="10" placeholder="Product Name">
+
+      </mat-form-field>
+
+      <mat-form-field hintLabel="Max 10 characters" appearance="fill">
+        <mat-label>Enter Products</mat-label>
+        <input matInput #input maxlength="10" placeholder="Product Name">
+
+      </mat-form-field>
+
+
+
+    </div>
+
+    <div class="appmt-container">
+      <mat-radio-group aria-label="Select an option">
         <mat-radio-button value="1"></mat-radio-button>
-         </mat-radio-group>
-    <mat-form-field hintLabel="Max 10 characters" appearance="fill">
-     <mat-label>Enter Products</mat-label>
-      <input matInput #input maxlength="10" placeholder="Product Name">
-    </mat-form-field>
+      </mat-radio-group>
+      <mat-form-field hintLabel="Max 10 characters" appearance="fill">
+        <mat-label>Enter Products</mat-label>
+        <input matInput #input maxlength="10" placeholder="Product Name">
+      </mat-form-field>
 
-  
 
-    <mat-form-field hintLabel="Max 10 characters" appearance="fill">
-      <mat-label>Enter Products</mat-label>
-      <input matInput #input maxlength="10" placeholder="Product Name">
-     
-    </mat-form-field>
-   
-    <mat-form-field hintLabel="Max 10 characters" appearance="fill">
-      <mat-label>Enter Products</mat-label>
-      <input matInput #input maxlength="10" placeholder="Product Name">
-     
-    </mat-form-field>
-  
-  
-  
-  </div>
-  <div class="example-container">
-    <mat-radio-group aria-label="Select an option">
+
+      <mat-form-field hintLabel="Max 10 characters" appearance="fill">
+        <mat-label>Enter Products</mat-label>
+        <input matInput #input maxlength="10" placeholder="Product Name">
+      </mat-form-field>
+
+      <mat-form-field hintLabel="Max 10 characters" appearance="fill">
+        <mat-label>Enter Products</mat-label>
+        <input matInput #input maxlength="10" placeholder="Product Name">
+
+      </mat-form-field>
+
+    </div>
+
+    <div class="appmt-container">
+      <mat-radio-group aria-label="Select an option">
         <mat-radio-button value="1"></mat-radio-button>
-         </mat-radio-group>
-    <mat-form-field hintLabel="Max 10 characters" appearance="fill">
-     <mat-label>Enter Products</mat-label>
-      <input matInput #input maxlength="10" placeholder="Product Name">
-    </mat-form-field>
-  
-  </div>
+      </mat-radio-group>
+      <mat-form-field hintLabel="Max 10 characters" appearance="fill">
+        <mat-label>Enter Products</mat-label>
+        <input matInput #input maxlength="10" placeholder="Product Name">
+      </mat-form-field>
 
- 
+    </div>
 
- <!-- <div class="example-container">
-     
-      <section class="example-section">
-          <h2>Riders</h2>
-        <mat-checkbox class="example-margin" [(ngModel)]="checked">QOL Rider</mat-checkbox>
-        <mat-checkbox class="example-margin" [(ngModel)]="indeterminate">Waiver</mat-checkbox>
-      </section>
-  </div> -->
-     
-  <div class="container">
-    <div class="row mt-4">
-     
-      <table>
-        <th style="padding: 4px; background: #2980b9; 
-        background: -webkit-linear-gradient(to right, #2980b9, #6dd5fa, #ffffff);
-        background: linear-gradient(to right, #2980b9, #6dd5fa, #ffffff);">
-          Riders
-        </th>
-        <tr>
-            <div>   
-                <mat-checkbox class="example-margin" [(ngModel)]="checked">QOL Rider</mat-checkbox>
+    <div class="appmt-container">
+      <div class="row mt-8">
+
+        <table>
+          <th style="padding: 4px; background: #2980b9; 
+            background: -webkit-linear-gradient(to right, #2980b9, #6dd5fa, #ffffff);
+            background: linear-gradient(to right, #2980b9, #6dd5fa, #ffffff);">
+            Riders
+          </th>
+          <tr>
+            <div>
+              <mat-checkbox class="example-margin" [(ngModel)]="checked">QOL Rider</mat-checkbox>
             </div>
-           <div>
-            <mat-checkbox class="example-margin" [(ngModel)]="indeterminate">Waiver</mat-checkbox>
-           </div>
-            
-        
-        </tr>
-      </table>
-  </div>
-  </div>
- 
-  
- 
+            <div>
+              <mat-checkbox class="example-margin" [(ngModel)]="indeterminate">Waiver</mat-checkbox>
+            </div>
+
+
+          </tr>
+        </table>
+      </div>
+    </div>
+
+    <app-agent-setup></app-agent-setup>
+  </mat-expansion-panel>
+</mat-accordion>
