--- a/ClientApp/src/app/hospital-indemnity/hospital-indemnity.component.css
+++ b/ClientApp/src/app/hospital-indemnity/hospital-indemnity.component.css
@@ -1,3 +1,3 @@
-.example-container .mat-form-field + .mat-form-field {
+.appmt-container .mat-form-field + .mat-form-field {
     margin-left: 8px;
   }
