--- a/ClientApp/src/app/hospital-indemnity/hospital-indemnity.component.html
+++ b/ClientApp/src/app/hospital-indemnity/hospital-indemnity.component.html
@@ -1,24 +1,39 @@
-<div class="example-container">
-    <mat-form-field hintLabel="Max 10 characters" appearance="fill">
-      <mat-label>Enter Products</mat-label>
-      <input matInput #input maxlength="10" placeholder="Product Name">
-      <mat-hint align="end">{{input.value?.length || 0}}/10</mat-hint>
-    </mat-form-field>
-
-    <mat-form-field class="example-full-width">
-        <mat-label>Choose a date</mat-label>
-        <input matInput [matDatepicker]="picker">
-        <mat-datepicker-toggle matSuffix [for]="picker">
-          <mat-icon matDatepickerToggleIcon>keyboard_arrow_down</mat-icon>
-        </mat-datepicker-toggle>
-        <mat-datepicker #picker></mat-datepicker>
-      </mat-form-field>
+<mat-accordion>
+  <mat-expansion-panel>
+    <mat-expansion-panel-header>
+      <mat-panel-title>
+        Hospital Indemnity
+      </mat-panel-title>
+    </mat-expansion-panel-header>
+    <div class="appmt-container">
+      <mat-form-field hintLabel="Max 10 characters" appearance="fill">
+        <mat-label>Enter Products</mat-label>
+        <input matInput #input maxlength="10" placeholder="Product Name">
       
-    <mat-form-field appearance="fill">
-      <mat-label>Select me</mat-label>
-      <mat-select>
-        <mat-option value="option">Accident Situs State</mat-option>
-      </mat-select>
-      <mat-hint align="end">Here's the dropdown arrow ^</mat-hint>
-    </mat-form-field>
-  </div>
+      </mat-form-field>
+  
+      <mat-form-field class="appmt-full-width">
+          <mat-label>Choose a date</mat-label>
+          <input matInput [matDatepicker]="picker">
+          <mat-datepicker-toggle matSuffix [for]="picker">
+            <mat-icon matDatepickerToggleIcon>keyboard_arrow_down</mat-icon>
+          </mat-datepicker-toggle>
+          <mat-datepicker #picker></mat-datepicker>
+        </mat-form-field>
+        
+      <mat-form-field appearance="fill">
+        <mat-label>Select me</mat-label>
+        <mat-select>
+          <mat-option value="option">Accident Situs State</mat-option>
+        </mat-select>
+        <mat-hint align="end">Here's the dropdown arrow ^</mat-hint>
+      </mat-form-field>
+    </div>
+    <app-agent-setup></app-agent-setup>
+    </mat-expansion-panel>
+    </mat-accordion>
+
+
+
+
+
