--- a/ClientApp/src/app/accident/accident.component.html
+++ b/ClientApp/src/app/accident/accident.component.html
@@ -8,11 +8,11 @@
       </mat-panel-title>
     </mat-expansion-panel-header>
     <div class="appmt-container">
-    <mat-form-field appearance="fill">
+    <!-- <mat-form-field appearance="fill">
       <mat-label>Enter Products</mat-label>
       <input matInput #input maxlength="10" placeholder="Product Name">
     
-    </mat-form-field>
+    </mat-form-field> -->
 
     <mat-form-field class="appmt-full-width">
         <mat-label>Choose a date</mat-label>
@@ -28,7 +28,7 @@
       <mat-select>
         <mat-option value="option">Accident Situs State</mat-option>
       </mat-select>
-      <mat-hint align="end">Here's the dropdown arrow ^</mat-hint>
+    
     </mat-form-field>
 
   </div>
