--- a/ClientApp/src/app/fppg/fppg.component.html
+++ b/ClientApp/src/app/fppg/fppg.component.html
@@ -6,17 +6,17 @@
       </mat-panel-title>
     </mat-expansion-panel-header>
     <div class="appmt-container" style="width: 100%;">
-      <mat-form-field appearance="fill" >
+      <!-- <mat-form-field appearance="fill" >
         <mat-label>Enter Products</mat-label>
         <input matInput placeholder="Product Name">
 
-      </mat-form-field>
+      </mat-form-field> -->
 
       <mat-form-field class="appmt-full-width">
         <mat-label>Choose a date</mat-label>
         <input matInput [matDatepicker]="picker">
         <mat-datepicker-toggle matSuffix [for]="picker">
-          <mat-icon matDatepickerToggleIcon>keyboard_arrow_down</mat-icon>
+       
         </mat-datepicker-toggle>
         <mat-datepicker #picker></mat-datepicker>
       </mat-form-field>
@@ -26,7 +26,7 @@
         <mat-select>
           <mat-option value="option">Accident Situs State</mat-option>
         </mat-select>
-        <mat-hint align="end">Here's the dropdown arrow ^</mat-hint>
+       
       </mat-form-field>
     </div>
 
