--- a/ClientApp/src/app/group-search/group-search.component.css
+++ b/ClientApp/src/app/group-search/group-search.component.css
@@ -1,31 +1,27 @@
-/* Structure */
-table {
-    width: 80%;
-  }
-  
-  .mat-form-field {
-    font-size: 14px;
-    width: 80%;
-  }
-  
-  mat-label {
-    font-weight: normal;
-    font-family: "Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
-    font-size: 16px;
-  }
 
-  mat-table td {
-    font-weight: normal;
-    font-family: "Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
-    font-size: 18px;
-  }
-  
-  mat-table th {
-    font-size: 20px;
-    font-weight: normal;
-    font-family: "Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
-  }
+.select-dropdown {
+  width: 100%;
+  border: 1px solid #ced4da;
+  border-radius: .25rem;
+  padding: .375rem 1.75rem .375rem .75rem;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #495057;
+  height: 40px;
+}
 
-  .mat-input-element {
-      width: 96% !important;
-  }
+.ng-autocomplete {
+  width: 380px !important;
+}
+
+.autocomplete-container .input-container input {
+  border-radius: .25rem;
+  border: 1px solid #ced4da;
+  padding: .375rem 1.75rem .375rem .75rem;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #495057;
+  height: 40px;
+}
